--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
+    "@reduxjs/toolkit": "^2.5.0",
     "expo": "~52.0.19",
     "expo-constants": "~17.0.3",
     "expo-status-bar": "~2.0.0",
@@ -22,7 +23,8 @@
     "react-native": "0.76.5",
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.1.0",
-    "react-native-web": "~0.19.13"
+    "react-native-web": "~0.19.13",
+    "react-redux": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
