--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "expo": "~52.0.19",
     "expo-constants": "~17.0.3",
     "expo-image-picker": "~16.0.4",
+    "expo-location": "^18.0.5",
     "expo-status-bar": "~2.0.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
