--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "expo-constants": "~17.0.3",
     "expo-image-picker": "~16.0.4",
     "expo-location": "^18.0.5",
+    "expo-sqlite": "~15.0.6",
     "expo-status-bar": "~2.0.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
