feat: agregar configuración de EAS y mejorar la gestión de ubicación en LocationSelector

--- a/app.json
+++ b/app.json
@@ -19,11 +19,19 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.thomasexpodev.MiProyecto"
     },
     "web": {
       "favicon": "./assets/favicon.png"
     },
-    "plugins": ["expo-sqlite"]
+    "plugins": [
+      "expo-sqlite"
+    ],
+    "extra": {
+      "eas": {
+        "projectId": "2be3056e-fae7-4970-b035-fe812d3ba11e"
+      }
+    }
   }
 }
