--- a/app.json
+++ b/app.json
@@ -1,29 +1,29 @@
 {
   "expo": {
-    "name": "MiProyecto",
-    "slug": "MiProyecto",
+    "name": "MiE-commerce",
+    "slug": "MiE-commerce",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
-    "userInterfaceStyle": "light",
+    "icon": "./assets/logoApp.png",
+    "userInterfaceStyle": "dark",
     "newArchEnabled": true,
     "splash": {
-      "image": "./assets/splash-icon.png",
+      "image": "./assets/logoApp.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#000"
     },
     "ios": {
       "supportsTablet": true
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
+        "foregroundImage": "./assets/logoApp.png",
+        "backgroundColor": "#000"
       },
-      "package": "com.thomasexpodev.MiProyecto"
+      "package": "com.thomasexpodev.MiE-commerce"
     },
     "web": {
-      "favicon": "./assets/favicon.png"
+      "favicon": "./assets/logoApp.png"
     },
     "plugins": [
       "expo-sqlite"
